[package]
name = "simbld_director"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
generate_worker_data = { path = "../test/generate_worker_data" }
serde = { version = "1.0", features = ["derive"] }
simbld_mimir = { path = "../mimir" }
simbld_models = { path = "../models" }
toml = "0.5.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
