[package]
name = "simbld_models"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive" ] }
strum = "0.18.0"
strum_macros = "0.18.0"
uuid = { version = "0.8", features = ["serde", "v4" ] }

