[package]
name = "generate_worker_data"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"
simbld_models = { path = "../../models" }
uuid = { version = "0.8", features = ["serde", "v4"] }
