[package]
name = "test_client"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
simbld_models = { path = "../../models" }
uuid = { version = "0.8", features = ["serde", "v4"] }

